# dotconf

./: .Xresources  .ansiweatherrc  .cvsrc  .cwmrc  .fvwmrc  .gitconfig  .gitmux.conf  .kshrc  .neomuttrc  .profile  .tmux.conf  .vimrc  .xsession  .yashrc  .zlogin  readme.org
.config/foot/: foot.ini
.config/nvim/: dumb.vim  init.lua  init.vim  old.vim
.config/polybar/: config  config.ini
.config/rofi/: config.rasi
.emacs.d/: init.el  readme.org
.gnupg/: gpg.conf
.local/share/barrier/: .barrier.conf
.ssh/: config
.xmonad/: xmonad-config.cabal  xmonad.hs
src/openbsd/: Makefile  Makefile.inc
src/openbsd/etc/: Makefile
src/openbsd/etc/hotplugd/: Makefile  attach
src/openbsd/etc/ssh/: Makefile  ssh_known_hosts  sshd_config
src/openbsd/etc/sway/: Makefile  config  sway-lock
src/openbsd/usr.local.bin/: Makefile
src/openbsd/usr.local.bin/fido/: Makefile  fido.pl
src/openbsd/usr.local.bin/git-credential-netrc/: Makefile
src/openbsd/usr.local.bin/rofi-bw/: Makefile  rofi-bw.sh
src/openbsd/usr.local.bin/rofi-mpc/: Makefile
src/openbsd/usr.local.bin/rofi-vmctl/: Makefile  rofi-vmctl.sh
