cabal-version:      2.4

name:               xmonad-config
version:            0.1.0.0
synopsis:           XMonad config
author:             Aaron Bieber
maintainer:         aaron@bolddaemon.com

executable xmonad-config
  main-is:            xmonad.hs
  ghc-options:        -Wall
  build-depends:      base, containers, xmonad, xmonad-contrib, unix
  hs-source-dirs:     .
  default-language:   Haskell2010
